--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-      	<a href="research.html" class="btn">Research</a>
+      	<a href="research.md" class="btn">Research</a>
         <a href="personal.html" class="btn">Personal</a>
         <a href="teachoutreach.html" class="btn">Teaching/Outreach</a>
  	<a href="CV.pdf" class="btn">CV</a>
