--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,10 +14,11 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-      	<a href="research.md" class="btn">Research</a>
-        <a href="personal.html" class="btn">Personal</a>
+	<a href="index.html" class="btn">Home</a>
+      	<a href="research.html" class="btn">Research</a>
         <a href="teachoutreach.html" class="btn">Teaching/Outreach</a>
- 	<a href="CV.pdf" class="btn">CV</a>
+        <a href="aboutme.html" class="btn">About Me</a>
+	<a href="CV.pdf" class="btn">CV</a>
    </header>
 
     <main id="content" class="main-content" role="main">
