--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,5 +6,5 @@ $header-bg-color: #159957 !default;
 $header-bg-color-secondary: #155799 !default;
 $header-bg-color: #510592;
 $header-bg-color-secondary: #040676;
-$section-headings-color: #040676
+$section-headings-color: #040676;
 @import "{{ site.theme }}";
