--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-$header-bg-color: #510592;
+$header-bg-color: #310f4d;
 $header-bg-color-secondary: #0a05ab;
 $section-headings-color: #0a05ab;
 @import "{{ site.theme }}";
