changed link color

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,4 +4,5 @@
 $header-bg-color: #310f4d;
 $header-bg-color-secondary: #0a05ab;
 $section-headings-color: #0a05ab;
+$body-link-color: #762cd6;
 @import "{{ site.theme }}";
