editing phrasing of teachoutreach section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 	<a href="index.html" class="btn">Home</a>
       	<a href="research.html" class="btn">Research</a>
-        <a href="teachoutreach.html" class="btn">Teaching/Outreach</a>
+        <a href="teachoutreach.html" class="btn">E&amp;I/Teaching/Outreach</a>
         <a href="aboutme.html" class="btn">About Me</a>
 	<a href="CV.pdf" class="btn">CV</a>
    </header>
