--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
 
 {% seo %}
+    <meta name="description" content="Personal homepage of Goni Halevi, PhD student in the department of astrophysical sciences at Princeton." />
+    <meta name="author" content="Goni Halevi" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
