--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,8 +1,8 @@
 ---
 ---
 
-$header-bg-color: #310f4d;
-$header-bg-color-secondary: #0a05ab;
-$section-headings-color: #0a05ab;
+$header-bg-color: #cbbdff;
+$header-bg-color-secondary: #9375ff;
+$section-headings-color: #9375ff;
 $body-link-color: #762cd6;
 @import "{{ site.theme }}";
