--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -28,8 +28,8 @@
    </header>
 
     <main id="content" class="main-content" role="main">
-      {{ content } 
-	constructed // {% include image-gallery.html folder="/photos/constructed/" %}
+      {{ content }} 
+	{constructed // {% include image-gallery.html folder="/photos/constructed/" %}
 	}
 
       <footer class="site-footer">
